tests/data/invalid/bad_atom_value.extxyz
1
Properties=species:S:1:pos:R:3
H 0.0 abc 0.0
